--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 PORT=8080
 JWT_SECRET=change-me-to-a-long-random-secret
 DATABASE_URL=sqlite:voxium.db
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
+DISCORD_REDIRECT_URI=http://127.0.0.1:1420/
