--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -20,3 +20,4 @@ dotenvy = "0.15"
 futures-util = "0.3"
 actix-multipart = "0.7"
 actix-files = "0.6"
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
